--- a/design.css
+++ b/design.css
@@ -4,8 +4,8 @@
     font-family: sans-serif;
 }
 .back{
-    width: 100%;
     height: 100%;
     background-image: url(gapanbg.jpg);
+    background-size: 100%;
     background-position: center;
 }
