--- a/design.css
+++ b/design.css
@@ -8,3 +8,9 @@
     background-image: url(gapanbg.jpg);
     background-position: center;
 }
+.backbg{
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+}
