--- a/design.css
+++ b/design.css
@@ -10,6 +10,8 @@
 }
 .backbg{
     position: relative;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
     height: 100%;
